feat(#155): add suppressMinorUpdateEmail query parameter
